syntax = "proto3";
import "user.proto";
import "google/protobuf/timestamp.proto";

package pb;
option go_package = "gateway_service/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message LogoutUserRequest {
    string session_id = 1;
}

message LogoutUserResponse {
    string message = 1;
}


message UpdateUserRequest {
    string username = 1;
    optional string full_name = 2;
    optional string email = 3;
    optional string password = 4;
    optional string avatar = 5;
    optional string phone = 6;
    optional string role_name = 7;
    optional bool   is_active = 8;
}

message UpdateUserResponse {
    User user = 1;
}


message RenewAccessTokenRequest {
    string refresh_token = 1;
}

message RenewAccessTokenResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expires_at = 2;
}